<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:background="@color/background">
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Title"
        android:textSize="8pt"
        android:textStyle="bold"
        android:textColor="@color/textColor"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Subtitle"
        android:layout_marginTop="4dp"
        android:textColor="@color/subtextColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"/>
    <TextView
        android:id="@+id/tvAuthors"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/authors"
        android:textColor="@color/subtextColor"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitle" />
    <TextView
        android:id="@+id/authors"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="Authors"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toEndOf="@id/tvAuthors"
        app:layout_constraintBottom_toBottomOf="@id/tvAuthors" />
    <TextView
        android:id="@+id/tvPublisher"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/publisher"
        android:layout_marginTop="4dp"
        android:textColor="@color/subtextColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/authors" />
    <TextView
        android:id="@+id/publisher"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="Publisher"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toEndOf="@id/tvPublisher"
        app:layout_constraintBottom_toBottomOf="@id/tvPublisher" />
    <TextView
        android:id="@+id/tvPublished"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/published_date"
        android:layout_marginTop="4dp"
        android:textColor="@color/subtextColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/publisher" />
    <TextView
        android:id="@+id/published_date"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="Published date"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toEndOf="@id/tvPublished"
        app:layout_constraintBottom_toBottomOf="@id/tvPublished" />
    <TextView
        android:id="@+id/tvPageCount"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/no_pages"
        android:layout_marginTop="4dp"
        android:textColor="@color/subtextColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/published_date" />
    <TextView
        android:id="@+id/page_count"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="Page count"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toEndOf="@id/tvPageCount"
        app:layout_constraintBottom_toBottomOf="@id/tvPageCount" />
    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/summary"
        android:layout_marginTop="4dp"
        android:textColor="@color/subtextColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/page_count" />
    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="Description"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDescription" />
    <TextView
        android:id="@+id/tvCover"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/cover"
        android:layout_marginTop="4dp"
        android:textColor="@color/subtextColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description" />
    <ImageView
        android:id="@+id/image"
        android:layout_width="180dp"
        android:layout_height="230dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_marginTop="4dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toEndOf="@id/tvCover"
        app:layout_constraintTop_toBottomOf="@id/description"/>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorPrimary"
        android:tint="@color/background"
        app:fabSize="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>
</ScrollView>